--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
                 </div>
             </div>
         </section>
+	    <!-- Content section 4-->
+        <section>
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/07.jpg" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-5">
+                            <h2 class="display-4">Ou então nos visite hoje mesmo!</h2>
+							<p>De passagem ou freguês, você será sempre bem-vindo!</p>
+							<i  class="fas fa-map-pin"></i>  Rua Floriano Peixoto, n°123, Centro, Sobral-Ceará
+							<P></p>
+							<i class="fas fa-phone"></i> (88)98123-7764
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5">
