--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Souza Sorvetes</title>
+        <title>Sobral Sorvetes</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -54,7 +54,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Para aqueles com um gosto mais exigente...</h2>
-                            <p>Pensando nos mais diversos tipos de gostos, necessidades e principalmente buscando trazer mais saúde e mais inclusão para o sobralense, a Souza sorvete busca trazer mais opções de sorvete para pessoas com restrições alimentares como intolerantes a lactose, pessoas celíacas, entre outros.</p>
+                            <p>Pensando nos mais diversos tipos de gostos, necessidades e principalmente buscando trazer mais saúde e mais inclusão para o sobralense, a Sorveteria Sobral Sorvetes busca trazer mais opções de sorvete para pessoas com restrições alimentares como intolerantes a lactose, pessoas celíacas, entre outros.</p>
                         </div>
                     </div>
                 </div>
